:sparkles: Add overview field for namespace (#249)
